--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
         "pinia": "^2.0.35",
         "qrcode.vue": "^3.4.0",
         "qs": "^6.11.1",
-        "quill": "^1.3.7",
+        "quill": "1.3.6",
         "screenfull": "^6.0.2",
         "spark-md5": "^3.0.2",
-        "vue": "^3.2.47",
+        "vue": "^3.3.1",
         "vue-clipboard3": "^2.0.0",
         "vue-router": "^4.1.6"
     },
@@ -41,12 +41,13 @@
         "@vue/cli-plugin-vuex": "~5.0.8",
         "@vue/cli-service": "~5.0.8",
         "@vue/compiler-sfc": "^3.2.47",
-        "babel-eslint": "^10.1.0",
+        "@babel/eslint-parser": "^7.21.8",
+        "@babel/core": "^7.21.8",
         "babel-plugin-import": "^1.13.6",
         "chalk": "^5.2.0",
         "dotenv": "^16.0.3",
         "eslint": "^8.40.0",
-        "eslint-plugin-vue": "^8.7.1",
+        "eslint-plugin-vue": "^9.12.0",
         "sass": "^1.62.1",
         "terser": "^5.17.1",
         "unplugin-auto-import": "^0.15.3",
