--- a/.env.production
+++ b/.env.production
@@ -4,4 +4,4 @@ VITE_CLI_PORT=8080
 VITE_SERVER_PORT=8888
 VITE_BASE_API=/api
 #下方修改为你的线上ip
-VITE_BASE_PATH=https://gin.oldwei.com
+VITE_BASE_PATH=https://chat.oldwei.com
