--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "pinia": "^2.0.35",
         "qrcode.vue": "^3.4.0",
         "qs": "^6.11.1",
-        "quill": "1.3.6",
+        "quill": "^1.3.7",
         "screenfull": "^6.0.2",
         "spark-md5": "^3.0.2",
         "vue": "^3.3.1",
@@ -52,7 +52,7 @@
         "terser": "^5.17.1",
         "unplugin-auto-import": "^0.15.3",
         "unplugin-vue-components": "^0.24.1",
-        "vite": "^4.3.5",
+        "vite": "^4.3.9",
         "vite-plugin-banner": "^0.7.0",
         "vite-plugin-importer": "^0.2.5"
     }
